--- a/css/style.css
+++ b/css/style.css
@@ -30,94 +30,102 @@
 }
 
 body {
-    margin: 0;
-    letter-spacing: .04em;
-    line-height: 1.5;
-    min-width: 940px;
+    display: block;
+    margin: 8px;
 }
 
-div.header {
+div#banner {
     background: url(../img/border3.jpg) repeat top left;
     height: 15px;
 }
 
-div.title {
-    max-width: 940px;
+div#container {
+    width: 80%;
+    min-width: 734px;
     margin: auto;
-    overflow: hidden;
 }
 
-div.footer {
-    max-width: 940px;
-    margin: auto;
-    text-align: right;
-    font-size: 10px;
-    color: #6c7373;
+div#header {
+    width: 100%;
+    padding-top: 10px;
+    overflow: auto;
 }
 
 div#logo {
+    width: 34%;
+    min-width: 210px;
+    max-width: 360px;
     float: left;
-    width: 360px;
-    padding-top: 15px;
 }
 
 div#menu {
+    padding-top: 30px;
+    width: 64%;
     float: right;
-    margin-top: 60px;
-    position: relative;
-    width: 575px;
 }
 
-div#menu ::after {
-    clear: both;
-}
-
-div#menu ul {
+.nav-collapse ul {
     list-style: none;
     margin: 0;
     padding: 0;
     float: right;
 }
 
-div#menu ul::after {
-    clear: both;
-}
-
-div#menu ul li {
+.nav-collapse li {
     float: left;
     position: relative;
     cursor: pointer;
-    padding-right: 12px;
+    padding-right: 10px;
+    display: block;
+}
+
+.js .nav-collapse {
+    clip: rect(0 0 0 0);
+    max-height: 0;
+    position: absolute;
+    display: block;
+    zoom: 1;
+}
+
+.nav-collapse.opened {
+    max-height: 9999px;
+}
+
+.nav-toggle {
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -o-user-select: none;
+    user-select: none;
+    width: 70px;
+    height: 35px;
+    float: right;
+    text-indent: -9999px;
+    overflow: hidden;
+    display: block;
+    background: url("../img/menu_bars.png") no-repeat 50% 22%;
+    background-size: 25px 25px;
 }
 
 div#menu a {
     text-decoration: none;
     font-family: 'playfair';
-    font-size: 20px;
+    font-size: 17px;
     color: #81735F;
     font-weight: BOLD;
     letter-spacing: 0px;
 }
 
-div.content {
-    overflow: hidden;
+div#page {
     padding-top: 20px;
 }
 
-div.content > div {
-    max-width: 940px;
-    margin-left: auto;
-    margin-right: auto;
+div#page > div {
     font-family: 'Open Sans';
     font-size: 17px;
     color: #6c7373;
-    padding-bottom: 30px;
-    position: relative;
-}
-
-div#life_goals {
-    padding-top: 30px;
-    padding-bottom: 30px;
 }
 
 .cntr {
@@ -126,16 +134,6 @@ div#life_goals {
 
 .red_text {
     color: #c67c6d;
-}
-
-.construction {
-    font-family: "cabin-bold";
-    font-size: 40px;
-    color: black;
-    line-height: 36px;
-    font-style: normal;
-    padding-bottom: 20px;
-    padding-top: 50px;
 }
 
 .font-sans-light {
@@ -167,34 +165,26 @@ div#life_goals .bullet i{
     margin-top: 2px;
 }
 
-div.banner {
-    background-color: #a0e0db;
-    border-color: #eae9e9;
-    height: 25px;
-    padding-bottom: 0px !important;
-}
-
-div#about img {
+img#nellie {
     margin-right: 25px;
     float: left;
+    width: 40%;
+    padding-left: 5px;
+}
+
+img.background_img {
+    width: 200px;
 }
 
 div#contact img {
-    margin-left: 25px;
+    width: 300px;
     float: right;
 }
 
 div.background_opacity_50 {
     position: absolute;
-    top: -25px;
-    right: -125px;
-    z-index: -10;
-}
-
-div.background_talking {
-    position: absolute;
-    top: -40px;
-    right: 90px;
+    top: 90px;
+    right: 5px;
     z-index: -10;
 }
 
@@ -205,4 +195,84 @@ p#how_step {
     padding-left: 10%;
     font-weight: bold;
 }
+
+div#bottom_border {
+    background-color: #a0e0db;
+    border-color: #eae9e9;
+    height: 25px;
+    margin-top: 20px;
+}
+
+div#footer {
+    text-align: right;
+    font-size: 10px;
+    color: #6c7373;
+}
+
+
+@media screen and (max-width: 750px) {
+    div#container {
+        width: 100%;
+        min-width: 0px;
+    }
+
+    div#header {
+        padding-top: 0px;
+    }
+
+    div#logo {
+        width: 100%;
+        max-width: 751px;
+    }
+
+    div#menu {
+        padding-top: 0px;
+        padding-right: 5px;
+        width: 100%;
+    }
+
+    .nav-collapse ul {
+        width: calc(100% - 105px);
+    }
+
+    .nav-collapse li {
+        float: none;
+    }
+
+    img.background_img {
+        width: 100px;
+    }
+
+    div.background_opacity_50 {
+        position: absolute;
+        top: 225px;
+        right: 5px;
+        z-index: -10;
+    }
+
+    .js-nav-active div.background_opacity_50 {
+        position: absolute;
+        top: 325px;
+        right: 5px;
+        z-index: -10;
+    }
+
+    div#contact img {
+        width: 170px;
+    }
+}
+
+@media screen and (min-width: 751px) {
+    .js .nav-collapse {
+        position: relative;
+    }
+    .js .nav-collapse.closed {
+        max-height: none;
+    }
+    .nav-toggle {
+        background-image: url(../img/menu_bars.png);
+        display: none;
+    }
+}
+
 
