--- a/css/style.css
+++ b/css/style.css
@@ -142,6 +142,10 @@ div#page > div {
     text-decoration: underline;
 }
 
+.heavy {
+    font-weight: bold;
+}
+
 .red_text {
     color: #c67c6d;
 }
